--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,6 +29,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/movies_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:isLoading="@{viewModel.isLoading}"
